<resources>
    <string name="app_name">anlmkTraining</string>
    <string name="app_password">Mật khẩu</string>
    <string name="btn_continue">Tiếp tục</string>
    <string name="agree">Đồng ý</string>
    <string name="cancel">Hủy</string>
    <string name="use_password_login">Dùng mật khẩu</string>
    <string name="use_finger_login">Vui lòng quét vân tay để tiếp tục</string>
    <string name="finger_error">Vân tay không hợp lệ.</string>
    <string name="use_finger_transaction">Vui lòng quét vân tay trên thiết bị để xác nhận giao dịch.</string>
    <string name="finger_config_title_1">Đăng nhập bằng vân tay</string>
    <string name="active_app">Kích hoạt ứng dụnDg</string>
    <string name="des_active_app">Nhập số điện thoại để kích hoạt ứng dụng AppName</string>
    <string name="faq">Hỏi đáp</string>
    <string name="contact">Liên hệ</string>
    <string name="des_active_app_pwd">Quý khách vui lòng nhập mật khẩu đăng nhập để kích hoạt dịch vụ.</string>
    <string name="des_again_active_app_pwd">Quý khách đăng nhập tài khoản AppName trên thiết bị mới. Vui lòng kích hoạt lại để sử dụng dịch vụ</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="login">Đăng nhập</string>
    <string name="homepage">Trang chủ</string>
    <string name="notification">Thông báo</string>
    <string name="look_at_command">Tra cứu lệnh</string>
    <string name="error_common_input">Vui lòng nhập %s</string>
    <string name="close">Đóng</string>
    <string name="error_at_server">Yêu cầu của Quý khách đến hệ thống tạm thời gián đoạn. Vui lòng thử lại sau.</string>
    <string name="error_no_network">Quý khách vui lòng kiểm tra kết nối Internet/3G/Wifi</string>
    <string name="error_network_disconnect">Kết nối đến hệ thống ngân hàng bị gián đoạn. Nếu Quý khách đang trong quá trình thực hiện giao dịch tài chính, vui lòng kiểm tra lịch sử giao dịch trước khi thực hiện giao dịch khác. Nếu chưa thực hiện giao dịch, vui lòng bỏ qua thông báo này và chọn lại dịch vụ mong muốn.</string>
    <string name="branch_open">Chi nhánh mở</string>
    <string name="all">Tất cả</string>
    <string name="decide_logout">Quý khách có chắc chắn muốn thoát phiên đăng nhập?</string>
    <string name="faq_link">https://mobile.vnpay.vn/VBA/html/vi/html-qa.html</string>
    <string name="notice_forget_pass">Quý khách vui lòng tới quầy giao dịch tại chi nhánh đăng ký tài khoản để được hỗ
        trợ. Xin cảm ơn!
    </string>
    <string name="error_password_not_enough">Mật khẩu phải từ 8 đến 20 ký tự. Quý khách vui lòng kiểm tra lại</string>
    <string name="notice_need_active_finger">Quý khách chưa cài đặt đăng nhập bằng vân tay. Quý khách có muốn
        cài đặt không?
    </string>
    <string name="finger_desc_config_1">Quý khách có thể đăng nhập bằng vân tay trong vòng 30 ngày hoặc 15 lần sau khi kích hoạt.</string>
    <string name="finger_config_title_2">Xác thực bằng vân tay</string>
    <string name="finger_desc_config_2">Sử dụng vân tay để xác thực giao dịch</string>
    <string name="finger_config">Cài đặt vân tay</string>
    <string name="success_login_finger">Quý khách đã kích hoạt đăng nhập bằng vân tay thành công, Quý khách có thể đăng nhập bằng vân tay trong vòng 30 ngày hoặc 15 lần sau khi kích hoạt.</string>
    <string name="decide_cancel_login_finger">Quý khách có chắc chắn muốn Hủy đăng nhập bằng vân tay?</string>
    <string name="decide_cancel_finance_finger">Quý khách có chắc chắn muốn hủy xác thực bằng vân tay?</string>
    <string name="success_finance_finger">Quý khách đã kích hoạt xác thực giao dịch bằng vân tay thành công.</string>
    <string name="success_remove_finger_login">Quý khách hủy đăng nhập bằng vân tay thành công</string>
    <string name="finger_change">Chức năng đăng nhập/ xác thực bằng vân tay của Quý khách đã bị ngưng tự động do có sự thay đổi vân tay trên thiết bị. Quý khách vui lòng kích hoạt lại chức năng này sau khi đăng nhập ứng dụng.</string>
    <string name="decide_active_finger_at_login">Quý khách chưa cài đặt  đăng nhập bằng vân tay, Quý khách có muốn cài đặt không ?</string>
    <string name="setting">Cài đặt</string>
    <string name="request_location">Quý khách chưa thiết lập quyền định vị cho ứng dụng, xin vui lòng kiểm tra cài đặt và thử lại.</string>
    <string name="error_empty_input_common">Vui lòng nhập %s</string>
    <string name="not_found_item_search">Danh sách trống</string>
    <string name="search">Tìm kiếm</string>
    <string name="not_found">Không tìm thấy</string>
    <string name="currency">đồng</string>
    <string name="thousand">nghìn</string>
    <string name="milion">triệu</string>
    <string name="billion">tỷ</string>
    <string name="thousand_billion">nghìn tỷ</string>
    <string name="no">Không</string>
    <string name="yes">Có</string>
    <string name="not_support_finger">Để sử dụng chức năng này:\n1. Thiết bị có hỗ trợ và đã cài đặt mật khẩu vân tay;\n2. Phiên bản từ 6.0 trở lên.</string>
    <string name="register_pin">Thiết bị chưa cài đặt dấu vân tay. Quý khách vui lòng cài đặt dấu vân tay trên thiết bị trước.</string>
    <string name="denied">Từ chối</string>
    <string name="copy">Sao chép</string>
    <string name="success_copy">Sao chép thành công</string>
    <string name="finger_login_des">Vui lòng nhập Mật khẩu đăng nhập ứng dụng  để hoàn tất cài đặt.</string>
    <string name="max_finger">Quý khách đã đăng nhập bằng vân tay quá 15 lần. Vui lòng kích hoạt lại để tiếp tục sử dụng</string>
    <string name="max_day_finger">Quý khách đã đăng nhập bằng vân tay quá 30 ngày. Vui lòng kích hoạt lại để tiếp tục sử dụng</string>
    <string name="type1">Bị từ chối</string>
    <string name="type2">Chờ kiểm soát</string>
    <string name="type3">Chờ phê duyệt</string>
    <string name="type4">Thành công</string>
    <string name="type5">Timeout</string>
    <string name="type6">Sắp hết hạn</string>
    <string name="type7">Xử lý lỗi</string>
    <string name="delete">Xoá</string>
    <string name="infor_transaction">Thông tin giao dịch</string>
    <string name="active">Kích hoạt</string>
    <string name="empty_list_notification">Quý khách chưa có thông báo mới nào.</string>
    <string name="dynamic_var_balance">Biến động số dư</string>
    <string name="other_news">Tin khác</string>
    <string name="today">Hôm nay</string>
    <string name="yesterday">Hôm qua</string>
    <string name="message_removed">Tin nhắn đã xóa</string>
    <string name="seen">Đã xem</string>
    <string name="approval_command">Duyệt lệnh</string>
    <string name="delete_all_message">Xoá tất cả tin nhắn</string>
    <string name="decide_remove_all_message">Quý khách có chắc chắn muốn xóa tất cả tin nhắn?</string>
    <string name="infor_bank">Thông tin Agribank</string>
    <string name="login_to_view_ott">Xem thông báo trước</string>
    <string name="des_login_to_view_ott">Xem thông báo trước khi đăng nhập</string>
    <string name="type8">Đã hết hạn</string>
    <string name="halo">Chào Quý khách\n%s</string>
    <string name="error_cerpinning">Chứng chỉ kết nối không đúng, để đảm bảo an toàn cho dữ liệu xin quý khách vui lòng cập nhật phiên bản mới nhất từ Google Play để tiếp tục sử dụng dịch vụ</string>
    <string name="success_reg_finger">Quý khách đã kích hoạt đăng nhập bằng vân tay thành công. Quý khách có thể đăng nhập vân tay trong vòng 30 ngày hoặc 15 lần sau khi kích hoạt</string>
    <string name="setting_notification">Cài đặt thông báo</string>
    <string name="error_login_new_device">Quý khách đăng nhập tài khoản AppName trên thiết bị mới. Vui lòng kích hoạt lại để sử dụng dịch vụ</string>
    <string name="upgrade">Nâng cấp</string>
    <string name="alert_root_device_hook">Để đảm bảo an toàn với thiết bị rooted và ứng dụng khác có can thiệp vào quá trình hoạt động của app. ABBANKmobile cảnh báo nguy cơ bảo mật, quý khách vui lòng xóa bỏ hoàn toàn Root, gỡ các phần mềm bên thứ 3 can thiệp vào ứng dụng. Chi tiết vui lòng liên hệ: 1900 5555 20 để được hỗ trợ.</string>
    <string name="label_isRooted">Ứng dụng chạy trên các thiết bị Root có thể gây ra rủi ro về an toàn thông tin. Quý khách vui lòng kiểm tra lại thiết bị</string>
    <string name="hintusername">Tên đăng nhập</string>
    <string name="hintpassword">Mật khẩu</string>
    <string name="btnlogin">Đăng Nhập</string>
    <string name="content_otp">Nhập mã xác thực OTP được gửi về \n số điện thoại</string>
    <string name="username_not_value">Quý khách vui lòng nhập Tên đăng nhập</string>
    <string name="password_not_value">Quý khách vui lòng nhập Mật khẩu</string>
    <string name="password_not_enough">" Quý khách vui lòng nhập lại "</string>
    <string name="myAlphaNumeric">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="allowsenteringnotes">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="otp_not_value">" Quý khách vui lòng nhập Mã xác thực OTP "</string>
    <string name="otp_not_enough">Mã xác thực OTP không hợp lệ. Quý khách vui lòng nhập lại</string>
    <string name="accountbalance">Số dư:</string>
    <string name="titleAcountActivity">Tài khoản</string>
    <string name="titlePayAccount">Tài khoản thanh toán</string>
    <string name="titleSaveAccount">Tài khoản tiết kiệm</string>
    <string name="titleTransferActivity">Chuyển khoản</string>
    <string name="title_internal_bank_transfer">Chuyển khoản nội bộ</string>
    <string name="receiverAccount_not_value">" Quý khách vui lòng nhập Số tài khoản thụ hưởng "</string>
    <string name="receiverAccount_not_enough">"Số tài khoản thụ hưởng không hợp lệ. Quý khách vui lòng nhập lại "</string>
    <string name="money_not_value">Quý khách vui lòng nhập Số tiền</string>
    <string name="note_not_value">"Quý khách vui lòng nhập Ghi chú "</string>
    <string name="content_internal_transfer_activity">Chuyển khoản nội bộ</string>
    <string name="content_transfer_activity">Chuyển khoản</string>
    <string name="content_otp_transfer">Mã xác thực sẽ được gửi về số điện thoại</string>
    <string name="content_confirm_internal_transfer_activity">Xác nhận thông tin</string>
    <string name="success">Thành Công!</string>
    <string name="toolbarsuccess">Thành Công</string>
    <string name="success_value">Bạn đã chuyển khoản thành công số tiền</string>
    <string name="newtransaction">Giao dịch mới</string>
    <string name="account">Tài khoản</string>
    <string name="titleAccountFrom">Tài khoản nguồn</string>
    <string name="accountNumber">sô tài khoản</string>
    <string name="titleAccountTo">Thông tin thụ hưởng</string>
    <string name="accountNumberTo">Số tài khoản thụ hưởng</string>
    <string name="money">Số tiền</string>
    <string name="VND">VND</string>
    <string name="note">Ghi chú</string>
    <string name="noteTransfer">Nội dung chuyển khoản</string>
    <string name="InputOTP">0123456789</string>
    <string name="accountfrom">Tài Khoản nguồn</string>
    <string name="accountFrom">Tài khoản nguồn</string>
    <string name="accounTo">Tài khoản thụ hưởng</string>
    <string name="accountName">Tên người thụ hưởng</string>
    <string name="fee">Phí giao dịch</string>
    <string name="payBill">Thanh toán hóa đơn</string>
    <string name="mobileRecharge">Nạp điện thoại</string>
    <string name="cardService">Dịch vụ thẻ</string>
    <string name="planeTicket">Vé máy bay</string>
    <string name="trainTicket">Vé tàu</string>
    <string name="cheapBusTicket">Vé xe rẻ</string>
    <string name="hotelBooking">Đặt phòng khách sạn</string>
    <string name="movieTicket">Vé xem phim</string>
    <string name="shoppingOnline">Mua sắm trực tuyến</string>
    <string name="QRPay">QRPay</string>
    <string name="internalBank">Chuyển khoản nội bộ</string>
    <string name="fastTransfer">Chuyển khoản nhanh</string>
    <string name="normalTransfer">Chuyển khoản thường</string>
    <string name="titleApprove">Duyệt lệnh</string>
</resources>