<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@color/page_color"
              android:layout_height="match_parent">
	<include layout="@layout/title_bar"/>
	<LinearLayout
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:background="@drawable/radius_alert"
			android:layout_margin="15dp"

			android:layout_height="wrap_content">

	<LinearLayout
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:paddingLeft="15dp"
			android:paddingRight="15dp"
			android:layout_height="wrap_content">
		<LinearLayout
				android:layout_width="0dp"
				android:orientation="vertical"
				android:layout_weight="0.1"
				android:paddingTop="10dp"
				android:paddingBottom="10dp"
				android:background="@drawable/cbb_bottom_selector"
				android:layout_height="wrap_content">

			<com.vnpay.anlmk.ui.views.TextView
					android:layout_width="match_parent"
					android:text="@string/finger_config_title_1"
					android:textSize="@dimen/main_size"
					android:textColor="@color/color_text"
					android:layout_height="wrap_content"/>

			<com.vnpay.anlmk.ui.views.TextView
					android:layout_width="match_parent"
					android:text="@string/finger_desc_config_1"
					android:textSize="@dimen/descript_size"
					android:layout_marginTop="5dp"
					android:textColor="@color/color_hint"
					android:layout_height="wrap_content"/>

		</LinearLayout>
		<androidx.appcompat.widget.SwitchCompat
				android:layout_width="wrap_content"
				android:paddingLeft="10dp"
				android:paddingTop="15dp"
				android:paddingBottom="15dp"
				android:id="@+id/finger_login"
				android:layout_height="wrap_content"/>
	</LinearLayout>
		<LinearLayout
				android:layout_width="match_parent"
				android:orientation="horizontal"
				android:paddingLeft="15dp"
				android:paddingRight="15dp"
				android:layout_height="wrap_content">
			<LinearLayout
					android:layout_width="0dp"
					android:orientation="vertical"
					android:layout_weight="0.1"
					android:paddingTop="10dp"
					android:paddingBottom="10dp"
					android:background="@drawable/cbb_noborder_selector"
					android:layout_height="wrap_content">

				<com.vnpay.anlmk.ui.views.TextView
						android:layout_width="match_parent"
						android:text="@string/finger_config_title_2"
						android:textSize="@dimen/main_size"
						android:textColor="@color/color_text"
						android:layout_height="wrap_content"/>

				<com.vnpay.anlmk.ui.views.TextView
						android:layout_width="match_parent"
						android:text="@string/finger_desc_config_2"
						android:textSize="@dimen/descript_size"
						android:layout_marginTop="5dp"
						android:textColor="@color/color_hint"
						android:layout_height="wrap_content"/>

			</LinearLayout>
			<androidx.appcompat.widget.SwitchCompat
					android:layout_width="wrap_content"
					android:paddingLeft="10dp"
					android:paddingTop="15dp"
					android:paddingBottom="15dp"
					android:id="@+id/finger_finance"
					android:layout_height="wrap_content"/>
		</LinearLayout>


	</LinearLayout>
</LinearLayout>